workloads/ovn-live-migration/workloads/ovn-live-migration/keepalive-detect-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: keepalive-detectd-nginx-service
spec:
  selector:
    app: keepalive-detectd-nginx
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
  sessionAffinity: None
