workloads/ovn-live-migration/workloads/ovn-live-migration/nodeport-traffic-service.yml
kind: Service
apiVersion: v1
metadata:
  name: keepalive-detect-nginx-nodeport-service
spec:
  selector:
    app: keepalive-detect-nginx 
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30036
  type: NodePort
  sessionAffinity: None
