workloads/ovn-live-migration/workloads/ovn-live-migration/perfapp-traffic-service.yml
kind: Service
apiVersion: v1
metadata:
  name: anp-traffic-node-port-service
spec:
  selector:
    trafficapp: perfapp   
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30036
  type: NodePort
  sessionAffinity: None
