workloads/ovn-live-migration/workloads/ovn-live-migration/postgres-service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: postgres-db-service
spec:
  selector:
    type: perfdb
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  type: ClusterIP
  sessionAffinity: None
